--- a/default.css
+++ b/default.css
@@ -1,153 +1,140 @@
 
-@font-face {
-  font-family: 'Cabin';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cabin Regular'), local('Cabin-Regular'), url(http://fonts.gstatic.com/s/cabin/v6/yQOMOX5hR0-6LTD879t-PQ.woff2) format('woff2'), url(http://fonts.gstatic.com/s/cabin/v6/JEgmtEDzc-IH8jBshQXrYA.woff) format('woff');
+*.animated {
+	transition: all .5s cubic-bezier(.2,.3,0,1);
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
-@font-face {
-  font-family: 'Cabin';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Cabin SemiBold'), local('Cabin-SemiBold'), url(http://fonts.gstatic.com/s/cabin/v6/pOvYyCQeTTtw6RxdlpulSvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2'), url(http://fonts.gstatic.com/s/cabin/v6/bSicyj3YibVhVPhGZyWVI_esZW2xOQ-xsNqO47m55DA.woff) format('woff');
+
+*:focus {
+	outline: none;
 }
 
 body {
-	background: #333;
-	font-family: 'Cabin';
-	font-weight: 400;
-	color: #fff;
+	background: #eee;
+	font-family: dosis, sans-serif;
+	margin: 0;
 }
 
 a {
-	text-decoration: none;
-	text-align: bottom;
 	color: #fff;
-	display: inline-block;
-	perspective: 600pt;
-	perspective-origin: 50% 50%;
+	text-decoration: none;
 	vertical-align: bottom;
 	white-space: nowrap;
-	outline: none;
-	transition: all .3s cubic-bezier(.5,0,0,1);
+	perspective: 600px;
+	perspective-origin: 50% 50%;
+	display: inline-block;
 }
+
 a::before {
-	background: rgba(255,255,255,.5);
-	position: absolute;
 	content: '';
-	width: 100%;
-	height: 100%;
-	padding: 2px;
-	top: -1px;
-	left: -1px;
-	z-index: -1;
-	transition: all .3s cubic-bezier(.5,0,0,1);
-	-webkit-transform: rotateX(80deg) translateY(150%);
-	-moz-transform: rotateX(80deg) translateY(150%);
-	-ms-transform: rotateX(80deg) translateY(150%);
-	-o-transform: rotateX(80deg) translateY(150%);
-	transform: rotateX(80deg) translateY(150%);
-}
-a:focus::before,
-a:hover::before {
-	-webkit-transform: rotateX(0deg);
-	-moz-transform: rotateX(0deg);
-	-ms-transform: rotateX(0deg);
-	-o-transform: rotateX(0deg);
-	transform: rotateX(0deg);
-}
-
-* {
-	transition: all .5s cubic-bezier(0.2,.3,0,1);
-}
-
-/* header */
-
-header {
-	background: #eee;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 0;
-	z-index: 200;
-}
-header.start {
-	height: 100%;
-}
-@-webkit-keyframes headerstart {
-	to {
-		height: 0;
-	}
-}
-header #logo {
-	position: fixed;
-	top: 10pt;
-	left: 10pt;
-	height: 80pt;
-}
-header #logo.start {
-	left: 50%;
-	top: 50%;
-	height: 50%;
-	-webkit-transform: translate(-50%,-50%);
-	transform: translate(-50%,-50%);
-	-webkit-animation: logostart .5s cubic-bezier(0.2,.3,0,1);
-	animation: logostart .5s cubic-bezier(.2,.3,0.1);
-}
-@-webkit-keyframes logostart {
-	from {
-		top: 150%;
-	}
-}
-@keyframes logostart {from { top: 150%;}}
-
-#background {
-	width: 100%;
-	height: auto;
-	top: 0;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-	position: fixed;
-	z-index: 1;
-	transition: top 0s;
-	clip: rect(0px,10000px,10000px,0px);
-}
-#background.bar {
-	clip: rect(0px,10000px,10000px,0px);
-	z-index: 100;
-}
-@-webkit-keyframes bgstart {
-	from {
-		top: 50%;
-	}
-}
-@media (max-aspect-ratio: 16/9) {
-	#background {
-		height: 100%;
-		width: auto;
-	}
-}
-
-/* content */
-#content {
-	z-index: 10;
 	position: absolute;
-	top: 100%;
+	bottom: 0;
+	left: 25%;
+	background: #9c27b0;
+	width: 50%;
+	height: 1px;
+	z-index: -1;
+	transition: all .3s cubic-bezier(.2,.3,0,1);
+}
+
+a:hover::before,
+a:focus::before {
+	left: -2%;
+	width: 104%;
+	height: 2px;
+}
+
+#load {
+	background: #9c27b0;
 	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 1000;
+	-webkit-transform: translate(-50%,-50%);
+	border-radius: 100%;
+}
+
+#header {
+	background: #333;
+	color: #fff;
+	text-align: center;
+	padding: 20px;
+	font-size: 1.2em;
+	-webkit-user-select: none;
+	user-select: none;
+}
+#header #title {
+	font-size: 2em;
+}
+#header #tabs {
+	font-size: 1em;
+}
+#header #tabs tab {
+	display: inline-block;
+	cursor: pointer;
+	perspective: 600px;
+	perspective-origin: 50% 50%;
+}
+#header #tabs tab::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
 	left: 0;
+	width: 100%;
+	height: 1px;
+	background: #9c27b0;
+	z-index: -1;
+	transition: all .3s cubic-bezier(.2,.3,0,1);
+}
+#header #tabs tab.selected::before {
+	height: 2px;
+}
+#header #tabs tab:hover::before,
+#header #tabs tab:focus::before {
+	height: 100%;
+}
+
+#header #tabs drop {
+	display: inline-block;
+	position: absolute;
 	background: #fff;
-	box-shadow: 0 -5pt 10pt 0 rgba(0,0,0,.5);
+	color: #000;
+	padding: 0 10px;
+	box-shadow: 0 3px 12px 0 rgba(0,0,0,.2);
+	pointer-events: none;
+	opacity: 0;
+	margin-top: -10px;
 }
-#content.start {
-	top: 200%;
+#header #tabs drop.visible {
+	pointer-events: auto;
+	margin-top: 0;
+	opacity: 1;
 }
-@-webkit-keyframes contentstart {
-	50% {
-		top: 96%;
-	}
-	100% {
-		top: 100%;
-	}
+#header #tabs drop tab {
+	display: list-item;
+	list-style-type: none;
+	cursor: pointer;
+}
+#teleport {
+	background: #9c27b0;
+	width: 1px;
+	height: 1px;
+	border-radius: 50%;
+	position: fixed;
+	z-index: 1000;
+	-webkit-transform: translate(-50%,-50%);
+}
+
+
+#footer {
+	background: #222;
+	color: #fff;
+	text-align: center;
+	padding: 20px 0;
+	-webkit-user-select: none;
+	user-select: none;
+}
+#footer.fixed {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
 }
