--- a/default.css
+++ b/default.css
@@ -1,6 +1,9 @@
 
-*.animated {
+@import url(http://fonts.googleapis.com/css?family=Montserrat:700,400);
+
+* {
 	transition: all .5s cubic-bezier(.2,.3,0,1);
+	-webkit-transition: all .5s cubic-bezier(.2,.3,0,1);
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -8,140 +11,134 @@
 	outline: none;
 }
 
+::-webkit-scrollbar {
+	width: 8px;
+}
+::-webkit-scrollbar-thumb {
+	background: #aaa;
+	border-radius: 4px;
+}
+
 body {
 	background: #eee;
-	font-family: dosis, sans-serif;
-	margin: 0;
+	font-family: 'Montserrat', sans-serif;
+	opacity: 0;
+	overflow-y: scroll; /* make sure scrollbar is always there */
+}
+body.vsb {
+	opacity: 1;
 }
 
-a {
-	color: #fff;
-	text-decoration: none;
-	vertical-align: bottom;
-	white-space: nowrap;
-	perspective: 600px;
-	perspective-origin: 50% 50%;
-	display: inline-block;
-}
-
-a::before {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 25%;
-	background: #9c27b0;
-	width: 50%;
-	height: 1px;
-	z-index: -1;
-	transition: all .3s cubic-bezier(.2,.3,0,1);
-}
-
-a:hover::before,
-a:focus::before {
-	left: -2%;
-	width: 104%;
-	height: 2px;
-}
-
-.title {
-	font-size: 1.3em;
-}
-
-#load {
-	background: #9c27b0;
+svg#teleport {
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
-	position: fixed;
-	z-index: 1000;
-	-webkit-transform: translate(-50%,-50%);
-	border-radius: 100%;
+	z-index: 9001; /* over 9000 */
+	pointer-events: none;
+}
+svg#teleport * {
+	pointer-events: all;
 }
 
-#header {
+
+/* header */
+
+header {
 	background: #333;
 	color: #fff;
-	text-align: center;
-	padding: 20px;
-	font-size: 1.2em;
-	z-index: 100;
-	-webkit-user-select: none;
-	user-select: none;
-	box-shadow: 0 3px 12px 0 rgba(0,0,0,.3);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 56px;
+	box-sizing: border-box;
+	-webkit-animation: headerin 1s;
+	animation: headerin 1s;
 }
-#header #title {
-	font-size: 2em;
+@-webkit-keyframes headerin {
+	0% {
+		top: -56px;
+	}
+	50% {
+		top: 0;
+		height: 60px;
+	}
+	100% {
+		height: 56px;
+	}
 }
-#header #tabs {
-	font-size: 1em;
+@keyframes headerin {
+	0%{top:-56px;}
+	50%{top:0;height:60px;}
+	100%{height:56px;}
 }
-#header #tabs tab {
-	display: inline-block;
-	cursor: pointer;
-	perspective: 600px;
-	perspective-origin: 50% 50%;
+
+header #plogo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 48px;
+	height: 48px;
+	margin: 4px;
 }
-#header #tabs tab::before {
-	content: '';
+header #ptitle {
+	position: absolute;
+	bottom: 12px;
+	font-size: 24px;
+	left: 56px;
+}
+header #ptabs {
+	position: absolute;
+	right: 4px;
+	bottom: 12px;
+}
+
+/* footer */
+
+footer {
+	background: rgba(0,0,0,.5);
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 1px;
-	background: #9c27b0;
-	z-index: -1;
-	transition: all .3s cubic-bezier(.2,.3,0,1);
-}
-#header #tabs tab.selected::before {
-	height: 2px;
-}
-#header #tabs tab:hover::before,
-#header #tabs tab:focus::before {
-	height: 100%;
-}
-
-#header #tabs drop {
-	display: inline-block;
-	position: absolute;
-	background: #fff;
-	color: #000;
-	padding: 0 10px;
-	box-shadow: 0 3px 12px 0 rgba(0,0,0,.2);
-	pointer-events: none;
-	opacity: 0;
-	margin-top: -10px;
-}
-#header #tabs drop.visible {
-	pointer-events: auto;
-	margin-top: 0;
-	opacity: 1;
-}
-#header #tabs drop tab {
-	display: list-item;
-	list-style-type: none;
-	cursor: pointer;
-}
-#teleport {
-	background: #9c27b0;
-	width: 1px;
-	height: 1px;
-	border-radius: 50%;
-	position: fixed;
-	z-index: 1000;
-	-webkit-transform: translate(-50%,-50%);
-}
-
-
-#footer {
-	background: #222;
-	color: #fff;
+	height: 56px;
 	text-align: center;
-	padding: 20px 0;
-	-webkit-user-select: none;
-	user-select: none;
-	box-shadow: 0 -3px 12px 0 rgba(0,0,0,.3);
+	box-sizing: border-box;
+	padding-top: 10px;
+	font-size: 12px;
+	color: rgba(255,255,255,.5);
+	-webkit-animation: footerin 1s;
+	animation: footerin 1s;
 }
-#footer.fixed {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
+@-webkit-keyframes footerin {
+	0% {
+		bottom: -56px;
+	}
+	50% {
+		bottom: 0;
+		height: 60px;
+	}
+	100% {
+		height: 56px;
+	}
+}
+@keyframes footerin {
+	0%{bottom:-56px;}
+	50%{bottom:0;height:60px;}
+	100%{height:56px}
+}
+
+/* tabgroups */
+tabgroup tab {
+	cursor: pointer;
+	margin: 10px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+tabgroup tab:active {
+	border-bottom: 1px solid #fff;
 }
