--- a/default.css
+++ b/default.css
@@ -1,7 +1,7 @@
 
 @import url(http://fonts.googleapis.com/css?family=Montserrat:700,400);
 
-* {
+*, *::before, *::after {
 	transition: all .5s cubic-bezier(.2,.3,0,1);
 	-webkit-transition: all .5s cubic-bezier(.2,.3,0,1);
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -23,7 +23,7 @@ body {
 	background: #eee;
 	font-family: 'Montserrat', sans-serif;
 	opacity: 0;
-	overflow-y: scroll; /* make sure scrollbar is always there */
+	overflow-y: hidden;
 }
 body.vsb {
 	opacity: 1;
@@ -45,7 +45,7 @@ svg#teleport * {
 /* content */
 
 content {
-	position: absolute;
+	position: fixed;
 	top: 56px;
 	left: 0;
 	right: 0;
@@ -53,6 +53,49 @@ content {
 	overflow: auto;
 }
 
+a {
+	color: inherit;
+	text-decoration: underline;
+	text-decoration-color: #9c27b0;
+	position: relative;
+}
+a:hover {
+	color: #fff;
+}
+a::after {
+	content: attr(href);
+	position: absolute;
+	bottom: 0;
+	color: #fff;
+	pointer-events: none;
+	left: 50%;
+	-webkit-transform: translateX(-50%) scale(0);
+	transform: translateX(-50%) scale(0);
+	background: #9c27b0;
+	padding: 10px;
+}
+a::before {
+	content: '';
+	position: absolute;
+	background: #9c27b0;
+	bottom: 50%;
+	left: 50%;
+	width: 10px;
+	height: 10px;
+	z-index: -1;
+	-webkit-transform: translate(-50%,-50%) rotate(45deg) scale(0);
+	transform: translate(-50%,-50%) rotate(45deg) scale(0);
+	pointer-events: none;
+}
+a:hover::after {
+	bottom: 100%;
+	-webkit-transform: translateX(-50%) scale(1);
+	transform: translateX(-50%) scale(1);
+}
+a:hover::before {
+	-webkit-transform: translate(-50%,-50%) rotate(45deg) scale(1);
+	transform: translate(-50%,-50%) rotate(45deg) scale(1);
+}
 
 /* header */
 
