--- a/default.css
+++ b/default.css
@@ -210,11 +210,23 @@ header hamburger #l3 {
 		pointer-events: all;
 		cursor: pointer;
 	}
+	header.open hamburger {
+		-webkit-transform: rotate(180deg);
+		transform: rotate(180deg);
+	}
 	header.open hamburger #l1 {
-		top: 15px;
+		top: 24px;
+		-webkit-transform: rotate(45deg);
+		transform: rotate(45deg);
+	}
+	header.open hamburger #l2 {
+		left: 24px;
+		width: 0;
 	}
 	header.open hamburger #l3 {
-		top: 33px;
+		top: 24px;
+		-webkit-transform: rotate(-45deg);
+		transform: rotate(-45deg);
 	}
 	
 	header.open #ptabs {
