--- a/default.css
+++ b/default.css
@@ -38,6 +38,17 @@ svg#teleport * {
 	pointer-events: all;
 }
 
+#msie {
+	position: fixed;
+	z-index: 10000;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	color: #fff;
+}
+
 /* content */
 
 content {
