add more footer stuff

--- a/default.css
+++ b/default.css
@@ -209,8 +209,12 @@ header hamburger #l3 {
 	header #ptabs {
 		pointer-events: none;
 		opacity: 0;
-		left: 56px;
 		right: 56px;
+		bottom: 0;
+		overflow-x: hidden;
+		max-height: 90%;
+		overflow-y: auto;
+		left: 56px;
 	}
 	header hamburger {
 		opacity: 1;
@@ -245,6 +249,10 @@ header hamburger #l3 {
 		list-style-type: none;
 		padding: 10px;
 	}
+	header #ptabs tab:active {
+		transition: all 0s;
+		-webkit-transition: all 0s;
+	}
 	header #ptabs tab::before {
 		display: none!important;
 	}
@@ -270,6 +278,22 @@ footer {
 	-webkit-animation: footerin 1s;
 	animation: footerin 1s;
 	z-index: 200;
+}
+footer #addinfo {
+	opacity: 0;
+	pointer-events: none;
+	position: relative;
+	top: 200px;
+}
+footer.open {
+	height: 90%;
+	z-index: 260;
+	background: rgba(0,0,0,1);
+}
+footer.open #addinfo {
+	opacity: 1;
+	pointer-events: all;
+	top: 0;
 }
 @-webkit-keyframes footerin {
 	0% {
