--- a/default.css
+++ b/default.css
@@ -212,13 +212,14 @@ header hamburger #l3 {
 	}
 	header.open #ptitle {
 		opacity: 0;
+		bottom: -12px;
 		pointer-events: none;
 	}
 	header #ptabs {
 		pointer-events: none;
 		opacity: 0;
 		right: 56px;
-		bottom: 0;
+		bottom: 100px;
 		/*overflow-x: hidden;*/
 		/*max-height: 90%;*/
 		/*overflow-y: auto;*/
@@ -251,6 +252,7 @@ header hamburger #l3 {
 	header.open #ptabs {
 		pointer-events: all;
 		opacity: 1;
+		bottom: 0;
 	}
 	header #ptabs tab {
 		display: list-item;
@@ -270,6 +272,35 @@ header hamburger #l3 {
 
 	header.noanim * {
 		pointer-events: none;
+		-webkit-transition: all 0s;
+		transition: all 0s;
+	}
+}
+@media (max-width: 900px) and (max-height: 400px) {
+	header {
+		width: 56px;
+		height: 56px;
+		border-radius: 28px;
+	}
+	header #ptitle {
+		display: none;
+	}
+	header.open {
+		height: 100%;
+		width: 100%;
+		border-radius: 0;
+	}
+	header hamburger {
+		top: 0;
+		left: 0;
+	}
+	header.open #ptabs {
+		overflow-x: hidden;
+		overflow-y: scroll;
+		top: 0;
+	}
+	header.noanim * {
+		overflow: hidden;
 	}
 }
 
