--- a/default.css
+++ b/default.css
@@ -118,6 +118,12 @@ a:hover::before {
 	text-align: center;
 }
 
+@media (max-width: 900px) and (max-height: 400px) {
+	content {
+		top: 0;
+	}
+}
+
 /* header */
 
 header {
@@ -205,6 +211,16 @@ header hamburger #l3 {
 	}
 	header.open {
 		height: 90%;
+	}
+	header #plogo {
+		width: 56px;
+		height: 56px;
+		margin: 0;
+	}
+	header.open #plogo {
+		margin: 4px;
+		width: 48px;
+		height: 48px;
 	}
 	header #ptitle {
 		font-size: 15px;
