--- a/default.css
+++ b/default.css
@@ -372,6 +372,29 @@ footer.open #addinfo {
 	100%{height:56px}
 }
 
+@media (max-width: 900px) and (max-height: 400px) {
+	footer {
+		width: 56px;
+		height: 56px;
+		border-radius: 28px;
+	}
+	footer #copyright {
+		position: relative;
+	}
+	footer:not(.open) *:not(#copyright) {
+		opacity: 0;
+		pointer-events: none;
+	}
+	footer:not(.open) #copyright {
+		top: 10px;
+	}
+	footer.open {
+		width: 100%;
+		border-radius: 0;
+		height: 100%;
+	}
+}
+
 /* tabgroups */
 tabgroup tab {
 	cursor: pointer;
