--- a/default.css
+++ b/default.css
@@ -41,6 +41,8 @@ svg#teleport {
 }
 svg#teleport * {
 	pointer-events: all;
+	-webkit-transform-origin: 50% 50%;
+	transform-origin: 50% 50%;
 }
 
 #msie {
