--- a/default.css
+++ b/default.css
@@ -486,3 +486,62 @@ tabgroup tab[external]:hover::before {
 	-webkit-transform: translate(-50%,50%) rotate(45deg) scale(1);
 	transform: translate(-50%,50%) rotate(45deg) scale(1);
 }
+
+/* dialog */
+
+es-dialog {
+	position: fixed;
+	z-index: 11000;
+	background: #fff;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%,-50%) scale(.5);
+	transform: translate(-50%,-50%) scale(.5);
+	width: 100%;
+	height: 100%;
+	max-width: 480px;
+	max-height: 320px;
+	display: block;
+	border-radius: 5px;
+	box-shadow: 0 0 24px 0 rgba(0,0,0,.23);
+	-webkit-box-shadow: 0 0 24px 0 rgba(0,0,0,.23);
+	pointer-events: none;
+	opacity: 0;
+}
+es-dialog.open {
+	-webkit-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	pointer-events: all;
+	opacity: 1;
+}
+es-dialog esd-top {
+	position: absolute;
+	width: 100%;
+	height: 56px;
+	top: 0;
+	box-sizing: border-box;
+	text-align: center;
+	font-size: 20px;
+	padding-bottom: 12px;
+	display: block;
+}
+es-dialog esd-title {
+	position: absolute;
+	left: 0;
+	bottom: 12px;
+	width: 100%;
+}
+es-dialog esd-message {
+	position: absolute;
+	top: 56px;
+	left: 0;
+	right: 0;
+	bottom: 56px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	box-sizing: border-box;
+	padding: 20px 10px;
+}
+es-dialog.mcent esd-message {
+	text-align: center;
+}
